<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:text="姓名："
            android:gravity="center"
            android:textSize="20dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        <EditText
            android:id="@+id/admin_id_change_name"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:text="密码："
            android:gravity="center"
            android:textSize="20dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        <EditText
            android:id="@+id/admin_id_change_password"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>
</LinearLayout>