<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ui_layout"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.example.administrator.finalterm.MainActivity">

    <TextView
            android:id="@+id/title"
            android:text="中山大学课程信息系统"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
            android:id="@+id/icon"
            android:layout_width="104dp"
            android:layout_height="104dp"
            app:srcCompat="@drawable/sysu"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    <TextView
            android:id="@+id/user_id"
            android:text="账号："
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toBottomOf="@id/icon"
            android:layout_marginTop="20dp" />

    <TextView
            android:id="@+id/user_pwd"
            android:text="密码："
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toBottomOf="@id/user_id"
            android:layout_marginTop="20dp"/>

    <EditText
            android:id="@+id/text_userid"
            android:hint="请输入账号"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:paddingTop="0dp"
            android:digits="0123456789"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/user_id"
            app:layout_constraintLeft_toRightOf="@+id/user_id"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"/>

    <EditText
            android:id="@+id/text_userpwd"
            android:hint="请输入密码"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:password="true"
            android:paddingTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/user_pwd"
            app:layout_constraintLeft_toRightOf="@+id/user_pwd"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp" />
    <TextView
        android:id="@+id/user_name"
        android:text="姓名："
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_userpwd"
        android:layout_marginTop="10dp" />
    <EditText
        android:id="@+id/text_name"
        android:hint="请输入姓名"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:paddingTop="0dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_userpwd"
        app:layout_constraintLeft_toRightOf="@+id/user_name"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        />

    <RadioGroup
            android:id="@+id/radioButton"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name"
            android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/user_identity"
            android:text="请选择身份："
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="学生"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="false"
            android:text="教师"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="false"
            android:text="管理员"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RadioGroup>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/radioButton"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/ui_button"
            android:text="完成注册"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>